...
    <string name="app_name">Drawing App</string>
    <string name="mobile_moguls_drawing_app">Shape Drawing App</string>
    <string name="check_out_the_art_gallery">Art Gallery</string>
    <string name="start_drawing">New Drawing</string>
    <string name="mobile_moguls_2024_v_0_0_15">© Mobile Moguls 2024 - V.1.0.0</string>
    <string name="mobile_moguls_company_logo">Mobile Moguls Company Logo</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="brush_size">Brush Size:</string>
    <string name="pen_size">Pen Size</string>
    <string name="pen_shape">Pen Shape</string>
    <string name="circle">Circle</string>
    <string name="small_shape">Small</string>
    <string name="medium_shape">Medium</string>
    <string name="large_shape">Large</string>
    <string name="oval">Oval</string>
    <string name="square">Square</string>
    <string name="art_gallery">Art Gallery</string>
    <string name="save_screen">Save Screen</string>
    <string name="image_preview">Image Preview</string>
    <string name="go_to_draw_screen">Back to Drawing</string>
    <string name="go_to_art_gallery">Go to Art Gallery</string>
...
